# compactmap

./: Cargo.toml  README.md
src/: README.md  lib.rs  quickcheck.rs  test.rs  wrapped.rs
